Renamed 'cloudapi' module to 'plugin'
The 'cloudapi' module and its references in the parent POM file have been renamed to 'plugin'. This change can better reflect the module's functionality.

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>instance</module>
         <module>common</module>
         <module>logger</module>
-        <module>cloudapi</module>
+        <module>plugin</module>
     </modules>
 
     <properties>
