--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>common</module>
         <module>logger</module>
         <module>plugin</module>
+        <module>api</module>
     </modules>
 
     <properties>
