Enable server transfer and add CloudServicesRequestPacketReceiver
This commit enables the setting for accepting transfers in server properties, and a new PacketReceiver, CloudServicesRequestPacketReceiver, has been introduced. These changes expand the server's functionality by allowing it to manage incoming requests for all cloud services.

--- a/instance/src/main/resources/server-files/spigot/server.properties
+++ b/instance/src/main/resources/server-files/spigot/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
 #Sat May 25 13:06:05 UTC 2024
-accepts-transfers=false
+accepts-transfers=true
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
