--- a/base/pom.xml
+++ b/base/pom.xml
@@ -60,6 +60,12 @@
             <version>${dependency.gson.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.14</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
