Replace logger module with terminal module and improve error handling
The commit replaces the logger module with a terminal module in the base, instance, and pom.xml files. It also adds error handling in the instance and base services to ensure that appropriate error messages are displayed when the network or instance configurations are not found. New command and subcommand files have also been introduced in the terminal module to improve the command-line interface.

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
         <module>base</module>
         <module>instance</module>
         <module>common</module>
-        <module>logger</module>
+<!--        <module>logger</module>-->
         <module>plugin</module>
         <module>api</module>
+        <module>terminal</module>
     </modules>
 
     <properties>
