--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>dev.golgolex</groupId>
-            <artifactId>logger</artifactId>
+            <artifactId>terminal</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
