Optimize cloud terminal command handling and delete unused classes
Deleted unused classes `PlatformVersion` and `CloudGroupPlatform`, and refactored command handling in `CloudTerminalThread` and `CommandService` classes for optimized user interaction within the terminal. The changes made in the terminal provides better safety measures for sub-commands while enhancing the user experience.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>plugin</module>
         <module>api</module>
         <module>terminal</module>
+        <module>module</module>
     </modules>
 
     <properties>
