--- a/terminal/pom.xml
+++ b/terminal/pom.xml
@@ -25,6 +25,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>${dependency.jetbrains-annoations.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.github.golgolex</groupId>
             <artifactId>quala</artifactId>
             <version>${dependency.quala.version}</version>
