--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,10 +12,17 @@
     <artifactId>api</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>claymc-release</id>
+            <url>https://nexus.claymc.net/repository/claymc-release/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
