--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,14 @@
         <module>base</module>
         <module>instance</module>
         <module>common</module>
-<!--        <module>logger</module>-->
         <module>plugin</module>
         <module>api</module>
-        <module>module</module>
     </modules>
 
     <properties>
         <!-- compiler and encoding -->
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <!-- build -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.version>0.0.1</project.build.version>
@@ -33,7 +31,7 @@
         <dependency.jetbrains-annoations.version>24.1.0</dependency.jetbrains-annoations.version>
         <dependency.lombok.version>1.18.32</dependency.lombok.version>
         <dependency.jansi.version>2.4.1</dependency.jansi.version>
-        <dependency.quala.version>1.0.12</dependency.quala.version>
+        <dependency.quala.version>1.0.15</dependency.quala.version>
         <dependency.guava.version>33.0.0-jre</dependency.guava.version>
         <dependency.gson.version>2.10.1</dependency.gson.version>
         <dependency.netty.verion>5.0.0.Alpha5</dependency.netty.verion>
@@ -47,6 +45,10 @@
             <id>claymc-release</id>
             <url>https://nexus.claymc.net/repository/claymc-release/</url>
         </repository>
+        <!--<repository>
+            <id>lumemedia-releases</id>
+            <url>https://nexus.claymc.net/repository/lumemedia-releases/</url>
+        </repository>-->
     </repositories>
 
 </project>
