--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -19,14 +19,14 @@
 
     <repositories>
         <repository>
-            <id>claymc-release</id>
-            <url>https://nexus.claymc.net/repository/claymc-release/</url>
+            <id>lumesolutions-release</id>
+            <url>https://repository01.lumesolutions.de/repository/lumesolutions-release/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>dev.golgolex</groupId>
+            <groupId>de.lumesolutions</groupId>
             <artifactId>quala-bom</artifactId>
             <version>${dependency.quala.version}</version>
             <scope>compile</scope>
