--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -19,8 +19,8 @@
 
     <repositories>
         <repository>
-            <id>claymc-release</id>
-            <url>https://nexus.claymc.net/repository/claymc-release/</url>
+            <id>lumesolutions-release</id>
+            <url>https://repository01.lumesolutions.de/repository/lumesolutions-release/</url>
         </repository>
         <repository>
             <id>papermc</id>
@@ -41,9 +41,8 @@
             <version>${dependency.papermc-velocity.verion}</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
-            <groupId>dev.golgolex</groupId>
+            <groupId>de.lumesolutions</groupId>
             <artifactId>quala-bom</artifactId>
             <version>${dependency.quala.version}</version>
             <scope>compile</scope>
